--- a/src/app/frontpage/frontpage.component.html
+++ b/src/app/frontpage/frontpage.component.html
@@ -1,1 +1,7 @@
-<p>frontpage works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <p>This is an example of parsing XLSX files to tables, press on <a routerLinkActive="active" [routerLink]="['parser']">here</a> or parser in the menu</p>
+        </div>
+    </div>
+</div>
