--- a/src/app/parser/parser.component.html
+++ b/src/app/parser/parser.component.html
@@ -7,7 +7,7 @@
                     <input type="file"
                            id="file"
                            multiple="false"
-                           accept=".csv,.xlsx"
+                           accept=".xlsx"
                            (change)="handleFileInput($event)">
                 </div>
             </form>
